@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2020-08-23 r79069) -- "Unsuffered Consequences"
+R Under development (unstable) (2020-09-08 r79155) -- "Unsuffered Consequences"
 Copyright (C) 2020 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -6363,7 +6363,7 @@ function(given = NULL) {
     if (is.null(given)) callObj$default <- TRUE
     callObj
 }
-<bytecode: 0x55b9cc296540>
+<bytecode: 0x2864668>
 > print(foo, useSource = FALSE)
 function (given = NULL) 
 {
@@ -6374,7 +6374,7 @@ function (given = NULL)
         callObj$default <- TRUE
     callObj
 }
-<bytecode: 0x55b9cc296540>
+<bytecode: 0x2864668>
 > attr(foo, "srcref") <- NULL
 > foo
 function (given = NULL) 
@@ -6386,7 +6386,7 @@ function (given = NULL)
         callObj$default <- TRUE
     callObj
 }
-<bytecode: 0x55b9cc296540>
+<bytecode: 0x2864668>
 > (f <- structure(function(){}, note = "just a note",
 +                 yada = function() "not the same"))
 function(){}
@@ -7370,6 +7370,8 @@ Warning messages:
 [1] TRUE
 > all.equal(x, as.POSIXlt(x))
 [1] TRUE
+> all.equal(x, as.numeric(x))  # errored in R <= 4.0.2
+[1] "'current' is not a POSIXt"
 > all.equal(x, as.POSIXlt(x, tz = "EST5EDT"))
 [1] "'tzone' attributes are inconsistent ('' and 'EST5EDT')"
 > all.equal(x, x+1e-4)
